# Bilderrahmen

./: .cproject  .project  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  batt_man.c  batt_man.h  epd5in65f.c  epd5in65f.h  epdif.c  epdif.h  floyd_steinberg.c  floyd_steinberg.h  i2c_stuff.c  i2c_stuff.h  imagedata000.c  imagedata000.h  imagedata001.c  imagedata001.h  imagedata002.c  imagedata002.h  imagedata003.c  imagedata003.h  img_low_bat.c  img_low_bat.h  lis3dh.c  lis3dh.h  lis3dh_drv.c  lis3dh_drv.h  main.c  nvs_storage_stuff.c  nvs_storage_stuff.h  pictureframe_management_functions.c  pictureframe_management_functions.h  pixel_converter.c  pixel_converter.h  qdbmp.c  qdbmp.h  sdcard_stuff.c  sdcard_stuff.h
